[package]
name = "fanrs"
version = "0.11.5-PRE"
authors = ["Rasmus Kaj <kaj@kth.se>"]
description = "Manage and serve index of the Phantom comic books, fantomenindex.krats.se"
edition = "2024"

build = "src/build.rs"

[build-dependencies]
ructe = { version = "0.18.2", features = ["sass", "warp03"] }

[dependencies]
anyhow = "1.0"
chrono = "0.4.6"
clap = { version = "4.0.32", features = ["derive", "env", "wrap_help"] }
diesel-async = { version = "0.5.2", features = ["deadpool", "postgres"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.8"
mime = "0.3"
regex = "1.5.4"
reqwest = "0.12.2"
serde = { version = "1.0.88", features = ["derive"] }
scraper = "0.22.0"
slug = "0.1.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.3.0", default-features = false }
roxmltree = { version = "0.20.0", features = ["std"] }

[dependencies.diesel]
version = "2.2.6"
default-features = false # get rid of 32-column-tables support
features = ["chrono", "postgres"]
