[package]
name = "fanrs"
version = "0.12.1-PRE"
authors = ["Rasmus Kaj <rasmus@krats.se>"]
description = "Manage and serve index of the Phantom comic books, fantomenindex.krats.se"
edition = "2024"

build = "src/build.rs"

[build-dependencies]
ructe = { version = "0.18.2", features = ["sass", "warp03"] }

[dependencies]
anyhow = "1.0"
chrono = "0.4.6"
clap = { version = "4.0.32", features = ["derive", "env", "wrap_help"] }
diesel-async = { version = "0.7.4", features = ["deadpool", "postgres"] }
dotenv = "0.15.0"
mime = "0.3"
regex = "1.5.4"
reqwest = "0.12.2"
roxmltree = { version = "0.20.0", features = ["std"] }
scraper = "0.23.1"
serde = { version = "1.0.88", features = ["derive"] }
slug = "0.1.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
warp = { version = "0.3.0", default-features = false }

[dependencies.diesel]
version = "2.3.5"
default-features = false # get rid of 32-column-tables support
features = ["chrono", "postgres"]
